--- a/backend/templates/Despre.html
+++ b/backend/templates/Despre.html
@@ -66,10 +66,10 @@
           <div class="nameLogo">VoteBoat</div>
         </a>
         <div class="menuItems">
-          <a href="newPoll" title="Creează un poll nou">
+          <a href="newPoll" title="Creează un vot nou">
             <img src="{{ url_for('static',filename='images/addPoll.svg') }}" height="50px" class="svgGreen"/>
           </a>
-          <p>Creează un poll now</p>
+          <p>Creează un vot nou</p>
         </div>
       </div><!-- End of Nav Div -->
             <div class="header">
