--- a/backend/templates/confirmare.html
+++ b/backend/templates/confirmare.html
@@ -66,10 +66,10 @@
           <div class="nameLogo">VoteBoat</div>
         </a>
         <div class="menuItems">
-          <a href="newPoll" title="Creează un poll nou">
+          <a href="newPoll" title="Creează un vot nou">
             <img src="{{ url_for('static',filename='images/addPoll.svg') }}" height="50px" class="svgGreen"/>
           </a>
-          <p>Creează un poll now</p>
+          <p>Creează un vot nou</p>
         </div>
       </div><!-- End of Nav Div -->
 			<div class="header">
@@ -78,7 +78,7 @@
 						<div id="continut2">
 							<div style="padding:0px 20px 20px 20px;">
 								<div id="login" class="confirm">
-									<p class="titlu">A?i confirmat cu succes!</p>
+									<p class="titlu">Ați confirmat cu succes!</p>
 									<img src= "{{ url_for('static',filename='images/emailverf.svg') }}" height="80px" />
 
 								</div>
