--- a/backend/templates/newPoll.html
+++ b/backend/templates/newPoll.html
@@ -63,39 +63,6 @@
                         </div>
                         <div class="form-group optionsSCR">
                           <ul class="lista">
-                            <li>
-                              <span class="numeopt">Gusi si mama lui onisim presedinte</span>
-                            </li>
-                            <li>
-                              <span class="numeopt">Onisim presedinte</span>
-                            </li>
-                            <li>
-                              <span class="numeopt">Onisim presedinte</span>
-                            </li>
-                            <li>
-                              <span class="numeopt">Onisim presedinte</span>
-                            </li>
-                            <li>
-                              <span class="numeopt">Onisim presedinte</span>
-                            </li>
-                            <li>
-                              <span class="numeopt">Onisim presedinte</span>
-                            </li>
-                            <li>
-                              <span class="numeopt">Onisim presedinte</span>
-                            </li>
-                            <li>
-                              <span class="numeopt">Onisim presedinte</span>
-                            </li>
-                            <li>
-                              <span class="numeopt">Onisim presedinte</span>
-                            </li>
-                            <li>
-                              <span class="numeopt">Paul presedinte</span>
-                            </li>
-                            <li>
-                              <span class="numeopt">Thomas presedinte</span>
-                            </li>
                           </ul>
                         </div>
                         <div class="formbutoane">
@@ -168,6 +135,10 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <!--Bootstrap scripts end-->
+  <script
+      type="text/javascript"
+      src="../static/js/jsfrontend/functie adaugsre optiune.js"
+    ></script>
 </body>
 
 </html>
