--- a/backend/templates/confirmare.html
+++ b/backend/templates/confirmare.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--Favicon code-->
@@ -66,19 +66,19 @@
           <div class="nameLogo">VoteBoat</div>
         </a>
         <div class="menuItems">
-          <a href="newPoll" title="Creează un vot nou">
+          <a href="newPoll" title="Creeaza un vot nou">
             <img src="{{ url_for('static',filename='images/addPoll.svg') }}" height="50px" class="svgGreen"/>
           </a>
-          <p>Creează un vot nou</p>
+          <p>Creeaza un vot nou</p>
         </div>
       </div><!-- End of Nav Div -->
 			<div class="header">
 				<div id="continut1">
-					<div style="padding:210px 210px 110px 210px;">
+					<div style="padding:210px 210px 110px 210px;z-index: 10000">
 						<div id="continut2">
 							<div style="padding:0px 20px 20px 20px;">
 								<div id="login" class="confirm">
-									<p class="titlu">Ați confirmat cu succes!</p>
+									<p class="titlu">A?i confirmat cu succes!</p>
 									<img src= "{{ url_for('static',filename='images/emailverf.svg') }}" height="80px" />
 
 								</div>
