--- a/backend/templates/logareC.html
+++ b/backend/templates/logareC.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--Favicon code-->
@@ -77,7 +77,7 @@
       </div><!-- End of Nav Div -->
       <div class="header">
         <div id="continut1">
-          <div style="padding:210px 210px 110px 210px;">
+          <div style="padding:210px 210px 110px 210px;z-index: 10000">
 
 
             <td style="padding-right:80px; padding-top:0px; padding-bottom:30px; ">
@@ -96,12 +96,12 @@
                 onsubmit="return false;">
                   <div class="form-group">
                     <label for="ad" class="forum">Adresă e-uvt</label>
-                    <input type="text" id="ad" class="form-control" name="firstname" placeholder="Adresă e-uvt">
+                    <input type="text" id="ad" class="form-control" name="firstname" placeholder="Adresa e-uvt">
                   </div>
 
                   <div class="form-group">
                     <label for="nrm" class="forum">Număr matricol</label>
-                    <input type="text" id="nrm" class="form-control" name="lastname" placeholder="Număr matricol">
+                    <input type="text" id="nrm" class="form-control" name="lastname" placeholder="Numar matricol">
                   </div>
 
                   <div class="form-group">
@@ -139,7 +139,7 @@
     </div>
     <!--Waves end aici a fost Denis-->
     <div class="About">
-      <a id="About" href="Despre">©RSR</a>
+      <a id="About" href="Despre">>©RSR</a>
     </div>
   </div>
   <!--Header ends-->
