--- a/backend/templates/newPoll.html
+++ b/backend/templates/newPoll.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--Favicon code-->
@@ -44,7 +44,7 @@
       <!-- End of Nav Div -->
       <div class="header">
         <div id="continut1">
-          <div style="padding: 210px 210px 110px 210px">
+          <div style="padding: 210px 210px 110px 210px;z-index: 100000">
             <div id="continut2">
               <div style="padding: 0px 20px 20px 20px">
                 <div id="login" class="poll">
@@ -64,10 +64,10 @@
                         <div class="form-group optionsSCR">
                           <ul class="lista">
                           </ul>
-                        </div>
+                        </div>	
                         <div class="formbutoane">
                           <div class="inputopt">
-                            <input type="text" id="addoptiune" class="form-control" placeholder="Adaugă o opțiune">
+                            <input type="text" id="addoptiune" class="form-control" placeholder="Adauga o op?iune">
                           </div>
                           <div class="btnopt">
                             <button type="button" id="addBtn" class="btn btn-primary btnAlignLNP">Adăugare
