--- a/backend/templates/votPoll.html
+++ b/backend/templates/votPoll.html
@@ -98,7 +98,7 @@
         <!-- End of Nav Div -->
         <div class="header">
           <div id="continut1">
-            <div style="padding: 210px 210px 110px 210px">
+            <div style="padding: 210px 210px 110px 210px;z-index: 100000">
               <div id="continut2">
                 <div style="padding: 0px 20px 20px 20px">
                   <div id="login" class="poll">
