--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -1,670 +1,549 @@
 /*
 	https://codepen.io/sosuke/pen/Pjoqqp
 	Godsend pentru schimbat culori in svg-uri :D
-*/
-
-::-webkit-scrollbar
-{
-	width: 8px;
+*/ ::-webkit-scrollbar {
+  width: 8px;
 }
-
-::-webkit-scrollbar-track
-{
-	box-shadow: 0 0 5px grey inset;
-	border-radius: 5px;
+::-webkit-scrollbar-track {
+  box-shadow: 0 0 5px grey inset;
+  border-radius: 5px;
 }
-
-::-webkit-scrollbar-thumb
-{
-	background: rgb(0, 120, 240);
-	border-radius: 5px;
+::-webkit-scrollbar-thumb {
+  background: rgb(0, 120, 240);
+  border-radius: 5px;
 }
-
-::-webkit-scrollbar-thumb:hover
-{
-	background: rgb(0, 102, 204);
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(0, 102, 204);
 }
-
-body{ 
-	margin:0px; 
-    padding:0px;  
-	background-repeat:repeat-x; background-attachment:fixed;
-	background-color:#FFF;
-	}
-	  
-a{ color:#FFF; text-decoration:none; font-weight:bold; font-size:20px;}
-a:hover{ color: #06C; text-decoration:none;font-weight:bold; font-size:20px;}
-
-#continut{ width:800px; font-family: "Times new roman"; font-size:20px; margin:0px; padding:0px; text-align:left; color:#000000;}
-
+body {
+  margin: 0px;
+  padding: 0px;
+  background-repeat: repeat-x;
+  background-attachment: fixed;
+  background-color: #FFF;
+}
+a {
+  color: #FFF;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+}
+a:hover {
+  color: #06C;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+}
+#continut {
+  width: 800px;
+  font-family: "Times new roman";
+  font-size: 20px;
+  margin: 0px;
+  padding: 0px;
+  text-align: left;
+  color: #000000;
+}
 h1 {
-	font-family: "Lato", sans-serif;
-	font-weight: 300;
-	letter-spacing: 2px;
-	font-size: 48px;
-  }
-  p {
-	font-family: "Raleway", sans-serif;
-	letter-spacing: 1px;
-	font-size: 14px;
-	color: #333333;
-  }
-
-ul#menu
-{
-	margin:0;
-	padding:0;
-	list-style-type:none;
-	width:auto;
-	position:relative;
-	display:block;
-	height:30px;
-	font-size:20px;
-	font-weight:bold;
-	background:transparent url(images/nav_bg.png) repeat-x top left;
-	font-family:"Times new roman";
-	border-bottom:1px solid #000000;
-	border-top:1px solid #000000;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  letter-spacing: 2px;
+  font-size: 48px;
 }
-
-ul#menu li
-{
-	display:block;
-	float:left;
-	margin:0;
-	padding:0;
+p {
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 1px;
+  font-size: 14px;
+  color: #333333;
 }
-	
-ul#menu li a
-{
-	display:block;
-	float:left;
-	color:#999999;
-	text-decoration:none;
-	font-weight:bold;
-	padding:8px 20px 0 20px;
+ul#menu {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  width: auto;
+  position: relative;
+  display: block;
+  height: 30px;
+  font-size: 20px;
+  font-weight: bold;
+  background: transparent url(images/nav_bg.png) repeat-x top left;
+  font-family: "Times new roman";
+  border-bottom: 1px solid #000000;
+  border-top: 1px solid #000000;
 }
-	
-ul#menu li a:hover
-{	
-	color:#FFF;
-	height:22px;
-	background:transparent url(images/nav_bg.png) 0px -30px no-repeat;		
+ul#menu li {
+  display: block;
+  float: left;
+  margin: 0;
+  padding: 0;
 }
-	
-
-ul#menu li a.current
-{
-	display:inline;
-	height:22px;
-	background:transparent url(images/nav_bg.png) 0px -30px no-repeat;	
-	float:left;
-	margin:0;
+ul#menu li a {
+  display: block;
+  float: left;
+  color: #999999;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 8px 20px 0 20px;
 }
-
-.About
-{
-	position: absolute;
-	bottom: 10px;
-	right: 15px;
-	border-radius: 5px;
+ul#menu li a:hover {
+  color: #FFF;
+  height: 22px;
+  background: transparent url(images/nav_bg.png) 0px -30px no-repeat;
 }
-
-#About
-{
-	font-size: 16px;
-	color:rgb(0, 0, 0);
+ul#menu li a.current {
+  display: inline;
+  height: 22px;
+  background: transparent url(images/nav_bg.png) 0px -30px no-repeat;
+  float: left;
+  margin: 0;
 }
-
-.login
-{
-	border-radius: 5px;
-	background-color: rgba(255,255,255,0.6);
-	height: 450px;
-	width: 400px;
-	text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.About {
+  position: absolute;
+  bottom: 10px;
+  right: 15px;
+  border-radius: 5px;
 }
-
-.confirm
-{
-	border-radius: 5px;
-	background-color: rgba(255,255,255,0.6);
-	height: 200px;
-	width: 550px;
-	text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+#About {
+  font-size: 16px;
+  color: rgb(0, 0, 0);
 }
-
-.register
-{
-	border-radius: 5px;
-	background-color: rgba(255,255,255,0.6);
-	height: 450px;
-	width: 400px;
-	text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.login {
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.6);
+  height: 450px;
+  width: 400px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-
-.poll
-{
-	border-radius: 5px;
-	background-color: rgba(255,255,255,0.6);
-	height: 550px;
-	width: 900px;
-    display: flex;
-    flex-direction: column;
+.confirm {
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.6);
+  height: 200px;
+  width: 550px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-
-.txtfield:focus
-{
-	border: 3px solid #06C;
+.register {
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.6);
+  height: 450px;
+  width: 400px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-
-.DateLogin
-{
-	text-align: left;
+.poll {
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.6);
+  height: 550px;
+  width: 900px;
+  display: flex;
+  flex-direction: column;
 }
-
-.forum
-{
-	color: #000000;
-	font-size: 17px;
-	font-weight: 500;
-	font-family: 'Roboto', 'serif';
+.txtfield:focus {
+  border: 3px solid #06C;
 }
-
-.titlu
-{
-	font-family: 'Roboto', 'serif';
-	color: #000000;
-	font-size: 38px;
-	font-weight: 600;
+.DateLogin {
+  text-align: left;
 }
-
-#titluri
-{
-	display: flex;
-	flex-direction: row;
-	margin-top: 15px;
-	margin-bottom: -20px;
+.forum {
+  color: #000000;
+  font-size: 17px;
+  font-weight: 500;
+  font-family: 'Roboto', 'serif';
 }
-
-.titluP
-{
-	font-family: "Open Sans", 'Roboto', 'serif';
-	color: #000000;
-	font-size: 38px;
-	font-weight: 600;
-	width: 50%;
+.titlu {
+  font-family: 'Roboto', 'serif';
+  color: #000000;
+  font-size: 38px;
+  font-weight: 600;
 }
-
-.titluS
-{
-	font-family: "Open Sans", 'Roboto', 'serif';
-	color: #000000;
-	font-size: 38px;
-	font-weight: 600;
-	width: 50%;
+#titluri {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  margin-bottom: -20px;
 }
-
-.menu
-{
-	height: 100px;
-	background-color: #FFF;
-	display: flex;
-	align-items: center;
-	margin-left: 20px;
+.titluP {
+  font-family: "Open Sans", 'Roboto', 'serif';
+  color: #000000;
+  font-size: 38px;
+  font-weight: 600;
+  width: 50%;
 }
-
-.menuItems
-{
-	position: absolute;
-	align-items: center;
-	text-align: center;
-	right: 50px;
-	top: 15px;
+.titluS {
+  font-family: "Open Sans", 'Roboto', 'serif';
+  color: #000000;
+  font-size: 38px;
+  font-weight: 600;
+  width: 50%;
 }
-
-.svgGreen
-{
-	filter: invert(40%) sepia(92%) saturate(3132%) hue-rotate(97deg) brightness(91%) contrast(101%);
+.menu {
+  height: 100px;
+  background-color: #FFF;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
 }
-
-.svgBlue
-{
-	filter: invert(62%) sepia(81%) saturate(2999%) hue-rotate(149deg) brightness(87%) contrast(101%);
+.menuItems {
+  position: absolute;
+  align-items: center;
+  text-align: center;
+  right: 50px;
+  top: 15px;
 }
-
-.svgWhite
-{
-	filter: invert(100%) sepia(0%) saturate(7448%) hue-rotate(111deg) brightness(113%) contrast(100%);
+.svgGreen {
+  filter: invert(40%) sepia(92%) saturate(3132%) hue-rotate(97deg) brightness(91%) contrast(101%);
 }
-
-.nameLogo
-{
-	font-size: 48px;
-	vertical-align: middle;
-	display: inline;
-	font-family: 'Libre Baskerville', 'serif';
-	padding-top: 6px;
+.svgBlue {
+  filter: invert(62%) sepia(81%) saturate(2999%) hue-rotate(149deg) brightness(87%) contrast(101%);
 }
-
-a.linkLogo:link, a.linkLogo:visited, a.linkLogo:hover, a.linkLogo:active
-{
-	color: #000;
+.svgWhite {
+  filter: invert(100%) sepia(0%) saturate(7448%) hue-rotate(111deg) brightness(113%) contrast(100%);
 }
-
-.btnAlignL
-{
-	margin-left: 0px;
-	margin-top: 25px;
-	bottom: 5px !important;
+.nameLogo {
+  font-size: 48px;
+  vertical-align: middle;
+  display: inline;
+  font-family: 'Libre Baskerville', 'serif';
+  padding-top: 6px;
 }
-
-.btnAlignR
-{
-	margin-left: 90px;
-	margin-top: 25px;
-	bottom: 5px !important;
+a.linkLogo:link, a.linkLogo:visited, a.linkLogo:hover, a.linkLogo:active {
+  color: #000;
 }
-
-.btnAlignRConfirm
-{
-	margin-top: 25px;
-	margin-left: 33%;
+.btnAlignL {
+  margin-left: 0px;
+  margin-top: 25px;
+  bottom: 5px !important;
 }
-
-.btnAlignCreate
-{
-	margin-top: 15px;
-	margin-left: 38%;
+.btnAlignR {
+  margin-left: 90px;
+  margin-top: 25px;
+  bottom: 5px !important;
 }
-
-#continut1
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: calc(90vh - 130px);
-	text-align: center;
+.btnAlignRConfirm {
+  margin-top: 25px;
+  margin-left: 33%;
 }
-
-.noScroll
-{
-	overflow: hidden;
+.btnAlignCreate {
+  margin-top: 15px;
+  margin-left: 38%;
 }
-
-#continutRezultate
-{
-	border-radius: 5px;
-	width: 80vw;
-	top: 130px;
-	
-	color:rgb(0, 0, 0);
-
-	background-color: rgba(255, 255, 255, 0.9);
-
-	position: fixed;
-	overflow-y: auto;
-	overflow-x: hidden;
-
-	height: calc(90vh - 100px);
-
-	z-index: 1;
+#continut1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(90vh - 130px);
+  text-align: center;
 }
-
+.noScroll {
+  overflow: hidden;
+}
+#continutRezultate {
+  border-radius: 5px;
+  width: 80vw;
+  top: 130px;
+  color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.9);
+  position: fixed;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: calc(90vh - 100px);
+  z-index: 1;
+}
 #continutRezultate hr {
-
-	margin-left: 2vw;
-	margin-right: 2vw;
-
-    height: 32px;
-    background-image: linear-gradient(90deg, rgb(24, 37, 82), transparent);
-    
-    border: 0;
-    height: 1px;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  height: 32px;
+  background-image: linear-gradient(90deg, rgb(24, 37, 82), transparent);
+  border: 0;
+  height: 1px;
 }
-
-#continutRezultate h1
-{
-	margin-top: 16px;
-	margin-bottom: 32px;
-	color:rgb(37, 59, 136);
-	text-align: middle;
+#continutRezultate h1 {
+  margin-top: 16px;
+  margin-bottom: 32px;
+  color: rgb(37, 59, 136);
+  text-align: middle;
 }
-
-#continutRezultate h3
-{
-	margin-top: 16px;
-	margin-bottom: 16px;
-	margin-left: 2vw;
-	margin-right: 2vw;
-	color:rgb(24, 37, 82);
-	text-align: left;
+#continutRezultate h3 {
+  margin-top: 16px;
+  margin-bottom: 16px;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  color: rgb(24, 37, 82);
+  text-align: left;
 }
-
-#continutRezultate h5
-{
-	margin-top: 64px;
-	margin-bottom: 16px;
-	margin-left: 2vw;
-	margin-right: 2vw;
-	color:rgb(24, 37, 82);
-	text-align: left;
+#continutRezultate h5 {
+  margin-top: 64px;
+  margin-bottom: 16px;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  color: rgb(24, 37, 82);
+  text-align: left;
 }
-
-#continutRezultate p
-{
-	color:rgb(24, 37, 82);
-	margin-left: 2vw;
-	margin-right: 2vw;
-	text-align: left;
+#continutRezultate p {
+  color: rgb(24, 37, 82);
+  margin-left: 2vw;
+  margin-right: 2vw;
+  text-align: left;
 }
-
-#chart_voturi
-{
-	margin-left: 5vw;
-	margin-right: 5vw;
+#chart_voturi {
+  margin-left: 5vw;
+  margin-right: 5vw;
 }
-
-#continutRezultate_detalii li
-{
-	text-align:left;
+#continutRezultate_detalii li {
+  text-align: left;
 }
-
-#despre
-{
-	border-radius: 5px;
-
-	height: 70vh;
-	width: 80vw;
-	top: 130px;
-	
-	color:rgb(0, 0, 0);
-
-	background-color: rgba(255, 255, 255, 0.9);
-
-	position: fixed;
-	align-items: center;
-	text-align: center;
-
-	overflow-y: auto;
-	overflow-x: hidden;
-
-	z-index: 1;
+#despre {
+  border-radius: 5px;
+  height: 70vh;
+  width: 80vw;
+  top: 130px;
+  color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.9);
+  position: fixed;
+  align-items: center;
+  text-align: center;
+  overflow-y: auto;
+  overflow-x: hidden;
+  z-index: 1;
 }
-
-#despre h1
-{
-	margin-top: 16px;
-	color:rgb(37, 59, 136);
+#despre h1 {
+  margin-top: 16px;
+  color: rgb(37, 59, 136);
 }
-
-#despre h3,h5
-{
-	color:rgb(24, 37, 82);
+#despre h3, h5 {
+  color: rgb(24, 37, 82);
 }
-
-#despre p
-{
-	color:rgb(24, 37, 82);
+#despre p {
+  color: rgb(24, 37, 82);
 }
-
-#CEO
-{
-	margin-top: 25px;
-	margin-bottom: 50px;
+#CEO {
+  margin-top: 25px;
+  margin-bottom: 50px;
 }
-
 #CEO hr {
-    width: 10%;
-
-    background-image: linear-gradient(9deg, transparent, rgb(24, 37, 82), transparent);
-
-    border: 0;
-    height: 1px;
+  width: 40%;
+  background-image: linear-gradient(9deg, transparent, rgb(24, 37, 82), transparent);
+  border: 0;
+  height: 1px;
 }
-
-#despreTL
-{
-	margin-bottom: 50px;
-
-	display: flex;
-	align-items: center;
-	text-align: center;
-	flex-direction: column;
+#despreTL {
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
 }
-
 #despreTL hr {
-    width: 25%;
-
-    background-image: linear-gradient(9deg, transparent, rgb(24, 37, 82), transparent);
-
-    border: 0;
-    height: 1px;
+  width: 25%;
+  background-image: linear-gradient(9deg, transparent, rgb(24, 37, 82), transparent);
+  border: 0;
+  height: 1px;
 }
+#despreTL table {
+  font-family: "Lato", sans-serif;
+  font-size: 14px;
+  color: rgb(24, 37, 82);
+}
+#despreTL td.r {
+  width: 50%;
+  text-align: left;
+}
+#despreTL td.m {
+  max-width: 30px;
+  min-width: 30px;
+}
+#despreTL td.l {
+  width: 50%;
+  text-align: right;
+}
+#despreTeam {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+#despreFE {
+  width: 33%;
+  text-align: left;
+  flex-direction: column;
+}
+#despreFE hr {
+  width: 80%;
+  margin-left: 0;
+  background-image: linear-gradient(90deg, rgb(24, 37, 82), transparent);
+  border: 0;
+  height: 1px;
+}
+#despreFE p {
+  text-align: left;
+}
+#despreBK {
+  width: 33%;
+  text-align: right;
+  flex-direction: column;
+}
+#despreBK hr {
+  width: 80%;
+  margin-right: 0;
+  background-image: linear-gradient(90deg, transparent, rgb(24, 37, 82));
+  border: 0;
+  height: 1px;
+  margin-right: -5px;
+}
+#despreBK p {
+  text-align: right;
+}
+#despreBC {
+  width: 34%;
+  text-align: center;
+  flex-direction: column;
+}
+#despreBC hr {
+  width: 80%;
+  background-image: linear-gradient(90deg, transparent, rgb(24, 37, 82), transparent);
+  border: 0;
+  height: 1px;
+}
+#despreBC p {
+  text-align: center;
+}
+.vot {
+  text-align: left;
+  margin-left: 50px;
+}
+#newContent {
+  display: flex;
+  flex-direction: row;
+}
+.vot {
+  width: 50%;
+}
+.barasep {
+  width: 2px;
+  height: 100%;
+  background-image: linear-gradient(transparent, rgb(24, 37, 82));
+  margin-left: 5%;
+  margin-right: 5%;
+}
+.conectarevot {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: 50px;
+}
+.ics {
+  color: red;
+}
+.formbutoane {
+  display: flex;
+  flex-direction: column;
+}
+.btnopt {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: row;
+}
+.btncnt {
+  margin-top: 20px;
+}
+.btnconectare {
+  align-content: center;
+  flex-direction: column;
+}
+.btnAlignLNP {
+  margin-left: 0px;
+  width: 250px;
+  height: fit-content;
+}
+.btnAlignRNP {
+  margin-left: 90px;
+  width: 150px;
+  height: fit-content;
+}
+.optionsSCR {
+  overflow-x: auto;
+  overflow-y: auto;
+  height: 250px;
+}
+.lista {
+  color: #000000;
+  list-style-type: none;
+  font-size: 18px;
+}
+.voteOpt {
+  font-size: 22px;
+  color: #000000;
+}
+.lista button {
+  margin-left: 200px;
+  font-family: default;
+  font-size: medium;
+  background-color: rgb(11, 123, 235);
+  color: white;
+  height: 25px;
+  width: 60px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+#listavotare {
+  color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.9);
+  position: fixed;
+  align-items: center;
+  text-align: center;
+  overflow-y: auto;
+  overflow-x: hidden;
+  z-index: 1;
+  border-radius: 5px;
+  height: 55vh;
+  width: 40vw;
+  top: 160px;
+}
+.btnvotare {
+  margin: 25px;
+}
+#detaliivot {
+  margin-top: 25px;
 
-#despreTL table
-{
-	font-family: "Lato", sans-serif;
-	font-size: 14px;
+}
+#detaliivot hr {
+  width: 40%;
+  background-image: linear-gradient(9deg, transparent, rgb(24, 37, 82), transparent);
+  border: 0;
+  height: 1px;
+}
+#optiunivot {
+  margin: auto;
+  width: 30%;
+  padding: 10px;
+  text-align: left;
+}
+#detaliivot h3{
 	color: rgb(24, 37, 82);
 }
-
-#despreTL td.r
-{
-	width: 50%;
-	text-align: left;
+#optiunivot label {
+   cursor: default;
+  font-size: 14px;
+  color: rgb(24, 37, 82);
 }
-
-#despreTL td.m
-{
-	max-width: 30px;
-	min-width: 30px;
+.linkvot{
+	margin-right: 50%;
+    text-align: left;
+    margin-top: 10px;
 }
-
-#despreTL td.l
-{
-	width: 50%;
-	text-align: right;
-}
-
-#despreTeam
-{
-	display: flex;
-	align-items: center;
-	flex-direction: row;
-
-	margin-left: 50px;
-	margin-right: 50px;
-}
-
-#despreFE
-{
-	width: 33%;
-
-	text-align: left;
-	flex-direction: column;
-}
-
-#despreFE hr 
-{
-    width: 80%;
-	margin-left: 0;
-
-    background-image: linear-gradient(90deg, rgb(24, 37, 82), transparent);
-    border: 0;
-    height: 1px;
-}
-
-#despreFE p
-{
-	text-align: left;
-}
-
-#despreBK
-{
-	width: 33%;
-
-	text-align: right;
-	flex-direction: column;
-}
-
-#despreBK hr
-{
-	width: 80%;
-	margin-right: 0;
-
-    background-image: linear-gradient(90deg, transparent, rgb(24, 37, 82));
-    border: 0;
-    height: 1px;
-	margin-right:-5px;
-}
-
-#despreBK p
-{
-	text-align: right;
-}
-
-#despreBC
-{
-	width: 34%;
-
-	text-align: center;
-	flex-direction: column;
-}
-
-#despreBC hr 
-{
-    width: 80%;
-
-    background-image: linear-gradient(90deg, transparent, rgb(24, 37, 82), transparent);
-    border: 0;
-    height: 1px;
-}
-
-#despreBC p
-{
-	text-align: center;
-}
-
-.vot
-{
-	text-align: left;
-	margin-left: 50px;
-}
-
-#newContent
-{
-	display: flex;
-	flex-direction: row;
-}
-
-.vot
-{
-	width: 50%;
-}
-
-.barasep
-{
-	width: 2px;
-	height: 100%;
-	background-image: linear-gradient(transparent, rgb(24, 37, 82));
-	margin-left: 5%;
-	margin-right: 5%;
-}
-
-.conectarevot
-{
-	width: 50%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin-right: 50px;
-}
-
-.ics
-{
-	color: red;
-}
-
-.formbutoane
-{
-	display: flex;
-	flex-direction: column;
-}
-
-.btnopt{
-	margin-top: 25px;
-	display: flex;
-	flex-direction: row;
-}
-
-.btncnt
-{
-	margin-top: 20px;
-}
-
-.btnconectare
-{
-	align-content: center;
-	flex-direction: column;
-}
-
-.btnAlignLNP
-{
-	margin-left: 0px;
-	width: 250px;
-	height: fit-content;
-}
-
-.btnAlignRNP
-{
-	margin-left: 90px;
-	width: 150px;
-	height: fit-content;
-}
-
-.optionsSCR
-{
-	overflow-x: auto;
-	overflow-y: auto;
-	height: 250px;
-}
-
-.lista
-{
-	color: #000000;
-	list-style-type: none;
-	font-size: 18px;
-}
-
-.voteOpt
-{
-	font-size: 22px;
-	color: #000000;
-}
-.lista button
-{
-margin-left: 200px;
-font-family:default;
-font-size:medium;
-background-color: rgb(11, 123, 235);
-color:white;
-height:25px;
-width: 60px;
-border-radius: 5px;
-border:none;
-cursor:pointer;
-outline: none;
+.confVot p{
+	color: rgb(24, 37, 82);
 }
