--- a/backend/templates/newPoll.html
+++ b/backend/templates/newPoll.html
@@ -120,7 +120,7 @@
                                 type="text"
                                 id="addoptiune"
                                 class="form-control"
-                                placeholder="Adauga o op?iune"
+                                placeholder="Adauga o opțiune"
                               />
                             </div>
                             <div class="btnopt">
