--- a/backend/templates/confirmare.html
+++ b/backend/templates/confirmare.html
@@ -78,7 +78,7 @@
 						<div id="continut2">
 							<div style="padding:0px 20px 20px 20px;">
 								<div id="login" class="confirm">
-									<p class="titlu">A?i confirmat cu succes!</p>
+									<p class="titlu">Ați confirmat cu succes!</p>
 									<img src= "{{ url_for('static',filename='images/emailverf.svg') }}" height="80px" />
 
 								</div>
