--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -2,66 +2,169 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-<link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-<script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--Favicon code-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
+  <link
+  rel="apple-touch-icon"
+  sizes="180x180"
+  href="{{ url_for('static',filename='images/apple-touch-icon.png') }}"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="32x32"
+  href="{{ url_for('static',filename='images/favicon-32x32.png') }}"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="16x16"
+  href="{{ url_for('static',filename='images/favicon-16x16.png') }}"
+/>
+<link
+  rel="manifest"
+  href="{{ url_for('static',filename='images/site.webmanifest') }}"
+/>
+<link
+  rel="mask-icon"
+  href="{{ url_for('static',filename='images/safari-pinned-tab.svg') }}"
+  color="#0066cc"
+/>
+<link
+  rel="shortcut icon"
+  href="{{ url_for('static',filename='images/favicon.ico') }}"
+/>
+<meta name="apple-mobile-web-app-title" content="VoteBoat" />
+<meta name="application-name" content="VoteBoat" />
+<meta name="msapplication-TileColor" content="#0066cc" />
+<meta
+  name="msapplication-config"
+  content="{{ url_for('static',filename='images/browserconfig.xml') }}"
+/>
+<meta name="theme-color" content="#ffffff" />
+<!--Favicon code end-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <link rel="stylesheet" href= "{{ url_for('static',filename='css/style.css') }}" type="text/css" media="all" />
+  <link rel="stylesheet" href= "{{ url_for('static',filename='css/animatie.css') }}" type="text/css" media="all" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap"
+      rel="stylesheet">
+  <title>VoteBoat</title>
 </head>
 
-<body>
-<nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #e3f2fd;"> <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
-        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a> </div>
-        </li>
-        <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+<body class="noScroll">
+  <div>
+    <div id="container">
+      <div id="banner"></div>
+      <div class="menu">
+        <a href="/" class="linkLogo">
+          <img src="{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
+          <div class="nameLogo">VoteBoat</div>
+        </a>
+        <div class="menuItems">
+          <a href="newPoll" title="Creează un vot nou">
+            <img src="{{ url_for('static',filename='images/addPoll.svg') }}" height="50px" class="svgGreen"/>
+          </a>
+          <p>Creează un vot nou</p>
+        </div>
+      </div><!-- End of Nav Div -->
+      <div class="header">
+        <div id="continut1">
+          <div style="padding:210px 210px 110px 210px;z-index: 10000">
+
+
+            <td style="padding-right:80px; padding-top:0px; padding-bottom:30px; ">
+              <div id="continut2">
+                <div style="padding:0px 20px 20px 20px;">
+
+
+            </td>
+
+            <div id="login" class="login">
+              <p class="titlu">AUTENTIFICARE</p>
+
+              </tr>
+              <div class="DateLogin">
+                <form onsubmit="return false"
+                onsubmit="return false;">
+                  <div class="form-group">
+                    <label for="ad" class="forum">Adresă e-uvt</label>
+                    <input type="text" id="ad" class="form-control" name="firstname" placeholder="Adresa e-uvt">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="nrm" class="forum">Număr matricol</label>
+                    <input type="text" id="nrm" class="form-control" name="lastname" placeholder="Numar matricol">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="pass" class="forum">Text-cheie</label>
+                    <input type="password" id="pass" class="form-control" name="pss" placeholder="********">
+                  </div>
+
+                  <button type="submit"  id="ButonAutentificare" class="btn btn-primary btnAlignL">Autentificare</button>
+                  <button type="submit"  id="ButonInregistrare" class="btn btn-primary btnAlignR">Înregistrare</button>
+                </form>
+
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  <div align="center">
-  <div id="container">
-  <div id="banner"></div>
-      <div>
-        <ul id='menu'>
 
-</nav>
-<div id="continut">
-<div style="padding:210px 210px 210px 210px;">
-
-
-  <td style="padding-right:80px; padding-top:0px; padding-bottom:30px; ">
-    <div id="continut">
-    <div style="padding:0px 20px 20px 20px;">
-  </td>
-
-</div>
-
-</div>
-</div>
-
-</div>
-</div>
-<script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
-<script src="js/popper.min.js" type="text/javascript"></script>
-<script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
-<script type="text/javascript">
-//<!--
-//swfobject.registerObject("FLVPlayer");
-//-->
-</script>
+    <!--Waves Container-->
+    <div>
+      <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+        <defs>
+          <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+        </defs>
+        <g class="parallax">
+          <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)" />
+          <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+          <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+          <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+        </g>
+      </svg>
+    </div>
+    <!--Waves end aici a fost Denis-->
+    <div class="About">
+      <a id="About" href="Despre">>©RSR</a>
+    </div>
+  </div>
+  <!--Header ends-->
+  <!-- partial -->
+  
+  <!-- Bootstrap scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+  crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+  crossorigin="anonymous"></script>
+  <script
+      type="text/javascript"
+      src="../static/js/jsfrontend/testInregistrare.js"
+    ></script>
+  <script
+    type="text/javascript"
+    src="../static/js/jsfrontend/functieAutentificare.js"
+    ></script>
+  <!--Bootstrap scripts end-->
 </body>
+
 </html>
