--- a/backend/templates/newPoll.html
+++ b/backend/templates/newPoll.html
@@ -62,8 +62,7 @@
                           <input type="text" id="titluPoll" class="form-control" name="PollTitle" placeholder="Titlu" />
                         </div>
                         <div class="form-group optionsSCR">
-                          <ul class="lista">
-                          </ul>
+                          <ol class="lista"> </ol>
                         </div>	
                         <div class="formbutoane">
                           <div class="inputopt">
