Revert "Merge branch 'main' of https://github.com/40sLovers/Voting_Blockchain"
This reverts commit a26790781a5aea035795e586c56d0431b391050d, reversing
changes made to 62df24e4e4d5c93a6ed927d502206e17e16f224c.

--- a/backend/templates/Votare.html
+++ b/backend/templates/Votare.html
@@ -74,68 +74,33 @@
       <div id="continut1">
         <div id="listavotare">
           <div id="detaliivot">
-            <h2>Votează — |Nume Vot| </h2>
+            <h3>Optiunile pentru votul -Titlu- </h3>
             <hr>
           </div>
           <div id="optiunivot">
             <input type="radio" id="optVot" name="OPV" value="Opt1">
              
-            <label for="Opt1">This</label>
+            <label for="Opt1">empty</label>
             <br>
             <input type="radio" id="optVot" name="OPV" value="Opt2">
              
-            <label for="Opt2">is</label>
+            <label for="Opt2">empt</label>
             <br>
             <input type="radio" id="optVot" name="OPV" value="Opt3">
              
-            <label for="Opt3">a</label>
+            <label for="Opt3">Mpty</label>
             <br>
             <input type="radio" id="optVot" name="OPV" value="Opt4">
              
-            <label for="Opt4">story</label>
+            <label for="Opt4">MT</label>
             <br>
             <input type="radio" id="optVot" name="OPV" value="Opt5">
              
-            <label for="Opt5">all</label>
-            <br>
-            <input type="radio" id="optVot" name="OPV" value="Opt6">
-             
-            <label for="Opt6">about</label>
-            <br>
-            <input type="radio" id="optVot" name="OPV" value="Opt7">
-             
-            <label for="Opt7">how</label>
-            <br>
-            <input type="radio" id="optVot" name="OPV" value="Opt8">
-             
-            <label for="Opt8">my</label>
-            <br>
-            <input type="radio" id="optVot" name="OPV" value="Opt9">
-             
-            <label for="Opt9">life</label>
-            <br>
-            <input type="radio" id="optVot" name="OPV" value="Opt10">
-             
-            <label for="Opt10">got</label>
-            <br>
-            <input type="radio" id="optVot" name="OPV" value="Opt11">
-             
-            <label for="Opt11">flip-turned</label>
-            <br>
-            <input type="radio" id="optVot" name="OPV" value="Opt12">
-             
-            <label for="Opt12">upside</label>
-            <br>
-            <input type="radio" id="optVot" name="OPV" value="Opt13">
-             
-            <label for="Opt13">down</label>
-            <br>
-            <input type="radio" id="optVot" name="OPV" value="Opt14">
-             
-            <label for="Opt14">Aceasta este o opțiune extrem de lungă pentru a demonstra scoll orizontal.</label>
+            <label for="Opt5"></label>
+			   <br>
           </div>
-			  <div class="btnvotare">
-			  <button type="button" class="btn btn-lg btn-primary" disabled="disabled" id="Voteaza">Votează</button>
+			<div class="btnvotare">
+			  <button type="button" class="btn btn-primary">Voteaza</button>
 			  </div>
         </div>
       </div>
@@ -176,8 +141,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-<script>
-  $("input:radio").change(function () {$("#Voteaza").prop("disabled", false);});
-</script> <!-- Dezactiveaza butonul pana la selectia unei optiuni din lista -->
 </body>
 </html>
