--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -3,7 +3,6 @@
 	Godsend pentru schimbat culori in svg-uri :D
 */ ::-webkit-scrollbar {
   width: 8px;
-  height: 8px;
 }
 ::-webkit-scrollbar-track {
   box-shadow: 0 0 5px grey inset;
@@ -16,11 +15,6 @@
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(0, 102, 204);
 }
-
-::-webkit-scrollbar-corner {
-  background: transparent;
-}
-
 body {
   margin: 0px;
   padding: 0px;
@@ -28,7 +22,6 @@ body {
   background-attachment: fixed;
   background-color: #FFF;
 }
-
 a {
   color: #FFF;
   text-decoration: none;
@@ -134,7 +127,6 @@ ul#menu li a.current {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: rgb(24, 37, 82);
 }
 .register {
   border-radius: 5px;
@@ -508,54 +500,51 @@ a.linkLogo:link, a.linkLogo:visited, a.linkLogo:hover, a.linkLogo:active {
 }
 #listavotare {
   color: rgb(0, 0, 0);
-  border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.6);
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.9);
+  position: fixed;
   align-items: center;
   text-align: center;
+  overflow-y: auto;
+  overflow-x: hidden;
   z-index: 1;
-  height: 600px;
-  width: 800px;
+  border-radius: 5px;
+  height: 55vh;
+  width: 40vw;
+  top: 160px;
 }
 .btnvotare {
-  margin-top: 25px;
+  margin: 25px;
 }
 #detaliivot {
-  top: 25px;
-  display: inline-flex;
-  flex-direction: column;
+  margin-top: 25px;
+
 }
 #detaliivot hr {
-  width: 100%;
+  width: 40%;
   background-image: linear-gradient(9deg, transparent, rgb(24, 37, 82), transparent);
   border: 0;
   height: 1px;
 }
-
-#detaliivot h2 {
-  font-size: 2.5rem;
-}
-
 #optiunivot {
-  width: 80%;
+  margin: auto;
+  width: 30%;
   padding: 10px;
   text-align: left;
-  overflow-x: auto;
-  overflow-y: auto;
-  height: 400px;
-  font-weight: 600;
-  white-space: nowrap;
 }
-
+#detaliivot h3{
+	color: rgb(24, 37, 82);
+}
 #optiunivot label {
-  cursor: default;
-  font-size: 18px;
+   cursor: default;
+  font-size: 14px;
   color: rgb(24, 37, 82);
 }
-
-#detaliivot h3{
+.linkvot{
+	margin-right: 50%;
+    text-align: left;
+    margin-top: 10px;
+}
+.confVot p{
 	color: rgb(24, 37, 82);
 }
 .item
@@ -566,9 +555,4 @@ a.linkLogo:link, a.linkLogo:visited, a.linkLogo:hover, a.linkLogo:active {
   border-radius: 2px;
   cursor: pointer;
   background-color: rgba(255, 0, 0, 0.5);
-}
-.form-control-plaintext {
-  font-size: 18px;
-  color: #06C;
-  font-weight: 600;
 }
