--- a/backend/templates/confirmarevot.html
+++ b/backend/templates/confirmarevot.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
   <meta charset="UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -55,7 +54,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap" rel="stylesheet">
   <title>VoteBoat</title>
 </head>
-
 <body class="noScroll">
   <div>
     <div id="container">
@@ -77,18 +75,24 @@
 					<div style="padding:210px 210px 110px 210px;z-index: 10000">
 						<div id="continut2">
 							<div style="padding:0px 20px 20px 20px;">
-								<div id="login" class="confirm confVot">
-									<p class="titlu">A?i creat cu succes votul!</p>
+								<div id="login" class="confirm">
+									<p class="titlu">Ați creat cu succes votul!</p>
 									<img src= "{{ url_for('static',filename='images/check.svg') }}" height="80px" />
-									<div class="linkvot">
-									<h5>Linkul catre pagina de vot:</h5>
-										</div>
+                  <form class="form-inline">
+                    <div class="form-group mb-2">
+                      <h5>Link către pagina de vot: </h5>
+                    </div>
+                    <div class="form-group mx-sm-3 mb-2">
+                      <label for="linkVot" class="sr-only">Link</label>
+                      <input type="text" class="form-control-plaintext" id="linkVot" value="somelinktosome.site" readonly>
+                    </div>
+                    <img id="copytoclipboard" src="{{ url_for('static',filename='images/copyClipboard.svg') }}" height="24px" />
+                  </form>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
 				<!--Waves Container-->
 				<div>
 					<svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -115,5 +119,4 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
-
 </html>
