--- a/backend/templates/newPoll.html
+++ b/backend/templates/newPoll.html
@@ -110,7 +110,7 @@
                             />
                           </div>
                           <div class="form-group optionsSCR">
-                            <ul class="lista"></ul>
+                            <ol class="lista"></ol>
                           </div>
                           <div class="formbutoane">
                             <div class="inputopt">
