--- a/backend/templates/newPoll.html
+++ b/backend/templates/newPoll.html
@@ -237,10 +237,10 @@
       crossorigin="anonymous"
     ></script>
     <!--Bootstrap scripts end-->
-    <script
+    <!-- <script
       type="text/javascript"
       src="../static/js/jsfrontend/functie adaugsre optiune.js"
-    ></script>
+    ></script> -->
     <script
       type="text/javascript"
       src="../static/js/jsfrontend/conectarePagini.js"
